<resources>
    <string name="app_name">TO DO APP</string>
    <string name="tarefas_lembretes">TAREFAS/LEMBRETES</string>
    <string name="descricao">DESCRICAO</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="cancelar">Cancelar</string>
    <string name="criar_tarefa">Criar Tarefa</string>
    <string name="app_de_lembretes_e_tarefas">APP DE LEMBRETES E TAREFAS</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
</resources>